# light-score

./: .bandit  .dockerignore  .gitignore  AGENTS.md  Makefile  README.md  compose.yaml  justfile  main.py  pyproject.toml  run_local.py
.github/: copilot-instructions.md
.github/instructions/: playwright-typescript.instructions.md
.github/prompts/: generate-tests.prompt.md
.github/workflows/: backend-ci.yaml  backend-tests.yaml  ci.yaml  deploy-lightsail.yaml  e2e-manual.yaml  frontend-ci.yaml  functions-ci.yaml  lint.yaml  push-images.yaml  ruff.yaml  security.yaml
backend/: Dockerfile  README.md  requirements.txt
backend/src/: main.py
docs/: aws-iam-permissions.md  current-requirements.md  current-state.md  decision-log.md  deploy.md  development.md  navigation.md  plan-e2e-ci-integration.md  plan-playoff-bracket.md  release.md  season-history.md  staging-deploy.md
docs/plans/: hetzner-k8s.md  sqlite-game-history.md
e2e/: README.md  eslint.config.js  package.json  playwright.config.js  tsconfig.json
e2e/tests/: application.spec.ts  error-handling.spec.ts  home.spec.ts  playoff-bracket.spec.ts  playoff-picture.spec.ts  site-interaction.spec.ts  site-navigation.spec.ts
frontend/: Dockerfile  README.md  requirements.txt
frontend/src/: app.py  wsgi.py
functions/: README.md  requirements.txt
functions/src/: __init__.py  espn_integration.py  main.py  standings_parser.py
scripts/: check-deps.sh  compose.sh  install-deps.sh  lint-and-format.sh  makefile-demo.sh  run-local.sh  run-tests.sh  setup-aws.sh  setup-dev.sh  test-simple.sh  uv-sync.sh  workflow-docs.sh
terraform/: backend.tf  main.tf  providers.tf  variables.tf
(+29 files in other folders)
