[project]
name = "light-score"
version = "0.1.0"
description = "NFL Scores and Standings app (Flask + FastAPI + AWS)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
backend = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "httpx==0.28.1",
    "pydantic==2.11.7",
]
frontend = ["flask==3.1.1", "gunicorn==23.0.0", "requests==2.32.4"]
functions = [
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "pydantic==2.11.7",
    "httpx==0.28.1",
]
security = ["bandit[toml]==1.8.0", "pip-audit==2.7.0"]

[tool.bandit]
exclude_dirs = ["*/utest/*", "*/test/*", "*/__pycache__/*"]
skips = ["B101"]

[tool.ruff]
target-version = "py313"
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "ruff>=0.6.4",
    "ty>=0.0.1a18",
    "types-requests>=2.32.0.0",
]
